# TangoCalibration

./: settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/redcrackle/tangocalibration/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: TangoCalibrationApp.cpp  jni_interface.cpp
app/src/main/cpp/includes/: TangoCalibrationApp.hpp
app/src/main/java/com/redcrackle/tangocalibration/: CalibrationRenderer.java  MainActivity.java  TangoJniNative.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/redcrackle/tangocalibration/: ExampleUnitTest.java
